# Template-for-Embedded-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
