[package]
name = "stm32-embassy-template"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[features]
default = ["stm32f401re"]
stm32f401re = ["embassy-stm32/stm32f401re"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.10.0", features = [
    "defmt",
    "executor-thread",
    "platform-cortex-m",
] }
embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
